--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,7 @@ body{
 .btn-container{
   position: fixed;
   top: 42px;
-  left: 100px;
+  left: 97px;
   background-color: white;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   height: 4.5rem;
@@ -65,7 +65,8 @@ body{
 .tool-panel{
   position: fixed;
   top: 28px;
-  right: 120px;
+  right: 207px;
+  background-color: white;
   display: none;
   gap: 1.5rem;
   justify-content: space-evenly;
@@ -320,4 +321,20 @@ body{
   height: 100%;
   width: 100%;
   border-bottom-left-radius: 15px;
+}
+
+#video-grid{
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 35px;
+  right: 11px;
+  width: 12vw;
+  height: 30vh;
+}
+
+video{
+  width: 100%;
+  height: 50%;
+  object-fit: contain;
 }
