screen capture implemented

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,6 +63,12 @@
         <div class="tool">
             <img src="./icons/zoom_out.png" alt="zoomout" class="tool-img zoomout">
         </div>
+        <div class="outer_circle-capture">
+            <div class="capture round-btn"></div>
+        </div>
+        <div class="outer-circle">
+            <div class="record round-btn"></div>
+        </div>
     </div>
     <div id="video-grid"></div>
     <div class="sheet-container">
@@ -99,6 +105,7 @@
             location.assign("gallery.html");
         })
     </script>
+    <script src="./js/screenCapture.js"></script>
     <script src="./js/connectPeer.js"></script>
     <script src="./js/hamburger.js"></script>
     <script src="./js/sticky.js"></script>
