--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,17 +68,17 @@ body{
   right: 207px;
   background-color: white;
   display: none;
-  gap: 1.5rem;
+  gap: 0.8rem;
   justify-content: space-evenly;
   align-items: center;
-  height: 13vh;
-  width: 71vw;
+  height: 12vh;
+  width: 68vw;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   border-radius: 8px;
 }
 
 .tool{
-  height: 70%;
+  height: 73%;
   width: 7%;
   border-radius: 50%;
   text-align: center;
@@ -337,4 +337,65 @@ video{
   width: 100%;
   height: 50%;
   object-fit: contain;
+}
+
+.round-btn{
+  height: 2.2rem;
+  width: 2.2rem;
+  margin: auto;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.record{
+  background-color: red;
+}
+
+.capture{
+  background-color: white;
+  height: 2.5rem;
+  width: 2.5rem;
+}
+
+.outer-circle{
+  border-radius: 50%;
+  border: 5px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0px;
+  height: 64%;
+  width: 6%;
+  text-align: center;
+}
+
+.outer_circle-capture{
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0px;
+  background-color: black;
+  height: 64%;
+  width: 6%;
+  text-align: center;
+}
+
+.record-animation{
+  animation: scaleUp 1s ;
+  animation-iteration-count: infinite;
+}
+
+@keyframes scaleUp {
+  0%{
+      transform: scale(1);
+  }
+
+  50%{
+      transform: scale(1.1);
+  }
+
+  100%{
+      transform: scale(1);
+  }
 }
