toggling of user audio and video stream implemented

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,16 @@
             <div class="record round-btn"></div>
         </div>
     </div>
-    <div id="video-grid"></div>
+    <div id="video-grid">
+        <div class="video-tool__container">
+            <div class="mic">
+                <i class="fas fa-microphone-alt"></i>
+            </div>
+            <div class="user-video">
+                <i class="fas fa-video"></i>
+            </div>
+        </div>
+    </div>
     <div class="sheet-container">
         <div class="add-sheet_btn-container">
             <i class="fas fa-plus-circle"></i>
