--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -330,13 +330,28 @@ body{
   top: 35px;
   right: 11px;
   width: 12vw;
-  height: 30vh;
+  min-height: 21vh;
+  border: 1px solid;
 }
 
 video{
   width: 100%;
-  height: 50%;
+  height: 8rem;
   object-fit: contain;
+}
+
+.video-tool__container{
+  display: flex;
+  justify-content: space-between;
+  padding: 0.4rem 1rem;
+  height: 2.3rem;
+  width: 100%;
+  border: 1px solid;
+}
+
+.video-tool__container .fas{
+  font-size: x-large;
+  cursor: pointer;
 }
 
 .round-btn{
