--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -171,7 +171,7 @@ body{
 .sheet-container{
   position: fixed;
   bottom: 25px;
-  right: calc( (100vw - 76vw)/2 + 4rem );
+  right: calc( (100vw - 76vw)/2 + 7rem );
   display: flex;
   height: 4rem;
   width: 76vw;
@@ -284,6 +284,23 @@ body{
 .sticky-pad textarea:focus,
 .sticky-pad textarea:active {
   outline: none;
+}
+
+.chat-button{
+  height: 3.5rem;
+  width: 3.5rem;
+  position: fixed;
+  bottom: 4%;
+  right: 163px;
+  border: 1px solid;
+  border-radius: 6px;
+  z-index: 4;
+  cursor: pointer;
+}
+
+.chat-button:hover{
+  animation: gScaleUp 1s;
+  animation-fill-mode: forwards;
 }
 
 .gallery-button{
@@ -413,4 +430,56 @@ video{
   100%{
       transform: scale(1);
   }
+}
+
+.main__right{
+  height: 68vh;
+  width: 20vw;
+  position: absolute;
+  left: 58rem;
+  top: 10rem;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
+  display: none;
+}
+
+.main__header{
+  border-radius: 10px 10px 0px 0px;
+  text-align: center;
+  height: 2rem;
+  width: 100%;
+  background-color: gray;
+  padding-top: 5px;
+}
+
+.main__header > h3{
+  margin: 0px;
+  font-family: sans-serif;
+  color: white;
+}
+
+.main__chat_window{
+  height: calc(68vh - 2rem - 3.05rem);
+}
+
+.messages{
+  margin: 0px;
+}
+
+.message{
+  list-style: none;
+}
+
+.main__message_container{
+  height: 3rem;
+}
+
+#chat_message{
+  height: 100%;
+  width: 100%;
+  border: none;
+  border-radius: 0px 0px 10px 10px;
+  outline: none;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
 }
