--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,6 +88,20 @@
             <div class="sheet active" idx="0">Sheet 1</div>
         </div>
     </div>
+    <div class="main__right">
+        <div class="main__header">
+            <h3>Chat</h3>
+        </div>
+        <div class="main__chat_window">
+            <ul class="messages"></ul>
+        </div>
+        <div class="main__message_container">
+            <input id="chat_message" type="text" placeholder="Type message here...">
+        </div>
+    </div>
+    <button class="chat-button">
+        <i class="fas fa-comment-alt"></i>
+    </button>
     <button class="gallery-button">
         <i class="fas fa-image"></i>
     </button>
@@ -118,6 +132,7 @@
     <script src="./js/connectPeer.js"></script>
     <script src="./js/hamburger.js"></script>
     <script src="./js/sticky.js"></script>
+    <script src="./js/chat.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/draw.js"></script>
     <script src="./js/dbScript.js"></script>
