few chatting features implemented

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,9 @@
             <h3>Chat</h3>
         </div>
         <div class="main__chat_window">
-            <ul class="messages"></ul>
+            <ul class="messages">
+                <li class="log" style="display: list-item;">Welcome to Chat</li>
+            </ul>
         </div>
         <div class="main__message_container">
             <input id="chat_message" type="text" placeholder="Type message here...">
