--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,8 +2,20 @@
     box-sizing: border-box;
 }
 
+html, input {
+  font-family:
+    "HelveticaNeue-Light",
+    "Helvetica Neue Light",
+    "Helvetica Neue",
+    Helvetica,
+    Arial,
+    "Lucida Grande",
+    sans-serif;
+}
+
 body{
     margin: 0px;
+    padding: 0px;
     overflow: hidden;
 }
 
@@ -363,7 +375,6 @@ video{
   padding: 0.4rem 1rem;
   height: 2.3rem;
   width: 100%;
-  border: 1px solid;
 }
 
 .video-tool__container .fas{
@@ -465,9 +476,10 @@ video{
 
 .messages{
   margin: 0px;
+  padding: 0px;
 }
 
-.message{
+li{
   list-style: none;
 }
 
@@ -476,10 +488,30 @@ video{
 }
 
 #chat_message{
+  font-size: 100%;
   height: 100%;
   width: 100%;
-  border: none;
-  border-radius: 0px 0px 10px 10px;
+  border: 5px solid #000;
+  padding-left: 10px;
   outline: none;
+  border-radius: 0px 0px 10px 10px;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
+}
+
+.log{
+  color: gray;
+  font-size: 70%;
+  margin: 5px;
+  text-align: center;
+}
+
+.username{
+  font-weight: 700;
+  overflow: hidden;
+  padding-right: 15px;
+  text-align: right;
+}
+
+.messageBody{
+  color: gray;
 }
